# xlyrics

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  mkinstalldirs
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
po/: POTFILES.in  xlyrics.pot  zh_CN.po
src/: Makefile.am  Makefile.in  conf.c  conf.h  find.c  find.h  id3.c  id3.h  internal.c  internal.h  lyrics.c  lyrics.h  lyrics_creator.c  lyrics_download.c  lyrics_download.h  stylerc  xlyrics.c  xlyrics.h
src/audaciousplugin/: Makefile.am  Makefile.in  audacious_xlyrics.c
src/plugins/: Makefile.am  Makefile.in  lyrics_amarok.cpp  lyrics_audacious.c
src/scripts/: Lite.pm  Makefile  downloadlyrics.pl  uploadlyrics.pl
